Insrir um paragrafo

--- a/Site Exemplo/Index.html
+++ b/Site Exemplo/Index.html
@@ -10,5 +10,7 @@
     <h1>Olá, Mundo</h1>
     <hr>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi unde a perspiciatis ratione ab, rem optio cumque. Quos officiis dignissimos facilis at, dolorem perferendis blanditiis velit error dolor quam repudiandae.</p>
+    
+    <>pLorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione dolores explicabo perspiciatis, ducimus officiis architecto animi odio in, ipsa rem sint modi quaerat delectus excepturi, nobis dicta a? Aperiam, ipsa. Josimar</p>
 </body>
 </html>
